# tiredness-detection

./: .gitignore  Cargo.toml
core/: Cargo.toml
core/src/: eye_analysis.rs  lib.rs  main.rs
cv/: Cargo.toml  build.rs
cv/src/: lib.rs
